test/ui/test/packages/type-errors-in-manifest/package.metadata

name: 0, version: [ 2, "0", "0" ],

components: {
    ichi: "core",
    ni: {},
    san: { type: false, },
},
